# people-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: explanation.md  how-to.md  reference.md  tutorial.md
src/jobkit_mcp/: __init__.py  server.py  workspace.py
src/people_mcp/: __init__.py  profile.md  server.py  workspace.py
tests/: conftest.py  test_workspace.py
