[project]
name = "people-mcp"
version = "0.1.0"
description = "MCP server for job application workspace management"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
people-mcp = "people_mcp.server:main"
