[project]
name = "people-mcp"
version = "0.1.0"
description = "MCP server for job application workspace management"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "Logan Mohseni"}]
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/mohsenil85/people-mcp"
Repository = "https://github.com/mohsenil85/people-mcp"
Issues = "https://github.com/mohsenil85/people-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
people-mcp = "people_mcp.server:main"
