[project]
name = "jobkit-mcp"
version = "0.1.0"
description = "MCP server for job application workspace management"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "Logan Mohseni"}]
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/mohsenil85/jobkit-mcp"
Repository = "https://github.com/mohsenil85/jobkit-mcp"
Issues = "https://github.com/mohsenil85/jobkit-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
typeCheckingMode = "strict"

[tool.coverage.run]
source = ["jobkit_mcp"]
omit = ["src/jobkit_mcp/server.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
jobkit-mcp = "jobkit_mcp.server:main"
